Funcoes iniciais js

--- a/Convert-Money/index.html
+++ b/Convert-Money/index.html
@@ -34,14 +34,14 @@
       </label>
       <label>
         <p>Valor:</p>
-        <input type="number" placeholder="R$ 10.000,00"
+        <input class="input-currency" type="number" placeholder="R$ 10.000,00"
       /></label>
-      <button>Converter</button>
+      <button class="button-convert">Converter</button>
       <section>
         <div class="contain">
           <img src="assets/brasil 2.png" alt="Moeda-converter" />
           <p class="current">Real</p>
-          <p class="current-value">R$ 0.00</p>
+          <p class="current-value-to-convert">R$ 0.00</p>
         </div>
         <img src="assets/Vector.png" alt="Seta" />
         <div class="contain">
@@ -52,5 +52,5 @@
       </section>
     </main>
   </body>
-  <script src="js/index.js"></script>
+  <script src="js/scripts.js"></script>
 </html>
