--- a/Convert-Money/index.html
+++ b/Convert-Money/index.html
@@ -15,7 +15,7 @@
     <title>Convert Money</title>
   </head>
   <body>
-    <img class="logo" src="assets/logo.gif" alt="Logo-page" />
+    <img class="logo" src="assets/logo.png" alt="Logo-page" />
     <main>
       <label>
         <p>Converter <b>de</b>:</p>
